Bug d'afficahge d'overflow sur le navigateur FireFox résolue

--- a/src/app/administration/agenda/agenda-per-week/agenda-per-week.component.css
+++ b/src/app/administration/agenda/agenda-per-week/agenda-per-week.component.css
@@ -42,6 +42,12 @@
   overflow: overlay;
 }
 
+@supports (-moz-appearance:none) {
+  .week-container {
+    overflow: auto;
+  }
+}
+
 .week-day-header, .week-day-content {
   display: grid;
   grid-template-rows: 100%;
