--- a/src/app/administration/client/client-administration/client-edition-modal/client-information/client-card-modal/client-card-modal.component.css
+++ b/src/app/administration/client/client-administration/client-edition-modal/client-information/client-card-modal/client-card-modal.component.css
@@ -34,6 +34,12 @@
   overflow: overlay;
 }
 
+@supports (-moz-appearance:none) {
+  .client-cards-content {
+    overflow: auto;
+  }
+}
+
 .cards-container {
   display: flex;
   flex-direction: column;
