--- a/src/app/administration/product-management/package-management/create-bundle-modal/create-bundle-modal.component.css
+++ b/src/app/administration/product-management/package-management/create-bundle-modal/create-bundle-modal.component.css
@@ -83,3 +83,9 @@
 
   overflow: overlay;
 }
+
+@supports (-moz-appearance:none) {
+  .bundle-acs-content, .all-ac-rows {
+    overflow: auto;
+  }
+}
