--- a/src/app/administration/product-management/package-management/package-management.component.css
+++ b/src/app/administration/product-management/package-management/package-management.component.css
@@ -41,6 +41,12 @@
   overflow: overlay;
 }
 
+@supports (-moz-appearance:none) {
+  .all-packages {
+    overflow: auto;
+  }
+}
+
 .package-row {
   flex: 0 1 auto;
 
